<resources>
    <string name="app_name">MovieDB</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="write_login_and_password">Укажите логин и пароль, которые вы использовали для входа</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="we_will_find_any_film">Найдем любой фильм на ваш вкус</string>
    <string name="movies">Фильмы</string>
    <string name="favourites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="wrong_login_and_password">Неверный логин или пароль</string>
    <string name="something_wrong">Что-то пошло не так, попробуйте войти позже</string>
    <string name="exit">Выйти</string>
    <string name="favourite">Избранное</string>
    <string name="you_not_added_any_movies">Вы не добавили ни одного фильма</string>
    <string name="find_favourite_movies">Найти любимые фильмы</string>
    <string name="check_internet_connection">Что-то пошло не так, проверьте соединение</string>
</resources>