<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AuthFragment">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMarginTop"
        android:ems="14"
        android:text="@string/write_login_and_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputContainer"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaceIntoSubHeaderAndEditText"
        android:hint="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/light"
            android:textCursorDrawable="@drawable/input_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMarginTop"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInputContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/light"
            android:textCursorDrawable="@drawable/input_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorOutput"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="12"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputContainer"
        tools:text="Что-то пошло не так, попробуйте войти позже" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter"
        style="@style/Body.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/heightButton"
        android:text="@string/enter"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>